--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </main>
     <article>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eius a nobis voluptate rem facilis repellendus quisquam architecto necessitatibus nulla corporis earum maiores impedit soluta, velit facere, est quidem aspernatur.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eius a nobis voluptate rem facilis repellendus quisquam architecto necessitatibus nulla corporis earum maiores impedit soluta, velit facere, est quidem aspernatur.</p>
     </article>
     
 </body>
