--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eius a nobis voluptate rem facilis repellendus quisquam architecto necessitatibus nulla corporis earum maiores impedit soluta, velit facere, est quidem aspernatur.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eius a nobis voluptate rem facilis repellendus quisquam architecto necessitatibus nulla corporis earum maiores impedit soluta, velit facere, est quidem aspernatur.</p>
             </div>
+            <div class="col-12">
+                <img src="https://picsum.photos/200/300" alt="immaginerandom" class="img-fluid">
+            </div>
         </div>
     </article>
     
