--- a/index.html
+++ b/index.html
@@ -11,67 +11,49 @@
     <!--Bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--css custom-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <nav>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <!--Navbar-->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary nav-custom position-fixed top-0 w-100">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand text-br" href="#">Viaggi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <a class="nav-link" href="#">Destinazioni</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="#">Last Minute</a>
                   </li>
-                </ul>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Testimonianze</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Lavora con noi</a>
+                  </li>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-warning" type="submit">Search</button>
                 </form>
               </div>
             </div>
           </nav>
-    </nav>
-    <main>
-        <div class="container">
-            <div class="row">
-                <h1 class="text-danger">Blog viaggi</h1>
-                <div class="col-12">
-                </div>
-            </div>
-        </div>
-    </main>
-    <article class="container">
-        <div class="row">
+<!--Hero-->
+        <header class="container-fluid header-custom">
+          <div class="row justify-content-center align-items-center vh-100">
             <div class="col-12">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eius a nobis voluptate rem facilis repellendus quisquam architecto necessitatibus nulla corporis earum maiores impedit soluta, velit facere, est quidem aspernatur.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eius a nobis voluptate rem facilis repellendus quisquam architecto necessitatibus nulla corporis earum maiores impedit soluta, velit facere, est quidem aspernatur.</p>
+              <h1 class="text-center text-br">Blog Viaggi</h1>
             </div>
-            <div class="col-12">
-                <img src="https://picsum.photos/200/300" alt="immaginerandom" class="img-fluid">
-            </div>
-        </div>
-    </article>
+          </div>
+        </header>
+    
     
 
 
