--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
 </head>
 <body>
   <!--Navbar-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary nav-custom position-fixed top-0 w-100">
+        <nav class="navbar navbar-expand-lg bg-black nav-custom position-fixed top-0 w-100">
             <div class="container-fluid">
-              <a class="navbar-brand text-br" href="#">Viaggi</a>
+              <a class="navbar-brand text-white" href="#">Blog Viaggi</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Destinazioni</a>
+                    <a class="nav-link text-white" href="#">Destinazioni</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Last Minute</a>
+                    <a class="nav-link text-white" href="#">Last Minute</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Testimonianze</a>
+                    <a class="nav-link text-white" href="#">Testimonianze</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Lavora con noi</a>
+                    <a class="nav-link text-white" href="#">Lavora con noi</a>
                   </li>
-                <form class="d-flex" role="search">
+                <form class="d-flex mx-4" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-warning" type="submit">Search</button>
+                  <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
               </div>
             </div>
@@ -49,10 +49,42 @@
         <header class="container-fluid header-custom">
           <div class="row justify-content-center align-items-center vh-100">
             <div class="col-12">
-              <h1 class="text-center text-br">Blog Viaggi</h1>
+              <h1 class="text-center text-white">Blog Viaggi</h1>
             </div>
           </div>
         </header>
+
+<!--Card-->
+<article class="container-fluid">
+  <div class="row ">
+    <div class="col-12 d-flex justify-content-evenly align-items-center bg-black">
+      <div class="card bg-dark" style="width: 18rem;">
+        <img src="./media/Plane.jpg" class="card-img-top" alt="aeroporto">
+        <div class="card-body">
+          <h5 class="card-title text-white">Card title</h5>
+          <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-outline-warning">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card bg-dark" style="width: 18rem;">
+        <img src="./media/Plane.jpg" class="card-img-top" alt="aeroporto">
+        <div class="card-body">
+          <h5 class="card-title text-white">Card title</h5>
+          <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-outline-warning">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card bg-dark" style="width: 18rem;">
+        <img src="./media/Plane.jpg" class="card-img-top" alt="aeroporto">
+        <div class="card-body">
+          <h5 class="card-title text-white">Card title</h5>
+          <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-outline-warning">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</article>
     
     
 
