--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!--Card-->
 <article class="container-fluid">
   <div class="row ">
-    <div class="col-12 d-flex justify-content-evenly align-items-center bg-black">
+    <div class="col-12 d-flex justify-content-evenly align-items-center bg-black pb-5">
       <div class="card bg-dark" style="width: 18rem;">
         <img src="./media/Plane.jpg" class="card-img-top" alt="aeroporto">
         <div class="card-body">
@@ -85,6 +85,15 @@
     </div>
   </div>
 </article>
+
+<!--Footer-->
+<div class="container-fluid">
+  <div class="row bg-dark">
+    <div class="col-12">
+      <p class="text-white text-center">P Iva 74386934245369</p>
+    </div>
+  </div>
+</div>
     
     
 
