--- a/index.html
+++ b/index.html
@@ -89,19 +89,17 @@
 <!--Footer-->
 <div class="container-fluid">
   <div class="row bg-dark">
-    <div class="col-12">
+    <div class="col-12 d-flex justify-content-between">
       <p class="text-white text-center">P Iva 7438693424536978</p>
+      <p class="text-white text-center">Telefono 088488448884</p>
+      <p class="text-white text-center">Via Retta, 42</p>
     </div>
   </div>
 </div>
     
-    
 
 
-
-
-
-    <!--bootstrap script-->
+    <!--Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
