--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-white px-3" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Destinazioni</a>
+                    <a class="nav-link text-white px-3" href="#">Destinazioni</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Last Minute</a>
+                    <a class="nav-link text-white px-3" href="#">Last Minute</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Testimonianze</a>
+                    <a class="nav-link text-white px-3" href="#">Testimonianze</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Lavora con noi</a>
+                    <a class="nav-link text-white px-3" href="#">Lavora con noi</a>
                   </li>
-                <form class="d-flex mx-4" role="search">
+                <form class="d-flex mx-4 px-3" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
